--- a/.screenrc
+++ b/.screenrc
@@ -6,3 +6,21 @@
 #               "readbuf" ('<') and  "writebuf" ('>'):
 bufferfile    $HOME/.screen_exchange
 defscrollback 30000 # Use a 30000-line scrollback buffer
+
+# Jeff's screenrc file
+#
+# An alternative hardstatus to display a bar at the bottom listing the
+# windownames and highlighting the current windowname in blue. (This is only
+# enabled if there is no hardstatus setting for your terminal)
+hardstatus on
+hardstatus alwayslastline
+hardstatus string "%{.4W}%-w%{.rW}%n %t%{-}%+w %=%{..G} %H %{..Y} %m/%d %C%a "
+
+# shelltitle ''
+
+# Start a bunch of windows by default
+# screen -t scratch 0
+# screen -t git 1
+# screen -t vi 2 vi
+# screen -t server 2
+# screen -t psql 4
