--- a/.gitconfig
+++ b/.gitconfig
@@ -62,3 +62,5 @@
 	tool = gvimdiff
 [mergetool "gvimdiff"]
 	cmd = mvim -d \\\"$BASE\\\" \\\"$LOCAL\\\" \\\"$REMOTE\\\" \\\"$MERGED\\\"
+[push]
+	default = simple
