Create a new drg-macbook branch for $HOME
Various and sundry changes to these files:
  .gitconfig
  .perlconsolerc
  .pyhistory
  .pythonrc
  .screenrc
  .vim/doc/coffee-script.txt
  .vim/ftdetect/coffee.vim
  .vim/ftdetect/eco.vim
  .vim/ftplugin/coffee.vim
  .vim/indent/coffee.vim
  .vim/readme.md
  .vim/syntax/coffee.vim
  .vim/syntax/eco.vim
  bin/git-merge-and-push.sh
  vimfiles/README.md
  vimfiles/plugin/LargeFile.vim
  vimfiles/plugin/NERD_tree.vim

--- a/.gitconfig
+++ b/.gitconfig
@@ -46,8 +46,8 @@
   l = log
   sa = stash apply
   ss = stash create
-[branch]
-	autosetuprebase = always
+# [branch]
+  # autosetuprebase = always
 [grep]
 	extendRegexp = true
 [mergetool "vim"]
